k8s/base/22-minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  selector:
    app.kubernetes.io/component: minio
  ports:
    - name: s3
      port: 9000
      targetPort: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: minio
  template:
    metadata:
      labels:
        app.kubernetes.io/component: minio
    spec:
      containers:
        - name: minio
          image: minio/minio@sha256:14cea493d9a34af32f524e538b8346cf79f3321eff8e708c1e2960462bd8936e
          args: ["server", "/data"]
          ports:
            - containerPort: 9000
              name: s3
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: 256Mi
            limits:
              memory: 512Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minio-data
